--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "hbuilderx-for-uniapp-test",
     "description": "uni-app自动化测试，支持初始化测试环境，运行测试到android、ios、h5、微信小程序",
     "displayName": "HBuilderX uni-app自动化测试",
-    "version": "1.4.2",
+    "version": "1.5.0",
     "publisher": "hbuilderx",
     "engines": {
         "HBuilderX": "^3.7.3"
@@ -158,7 +158,7 @@
                 "hbuilderx-for-uniapp-test.uniappCompileNodeType": {
                     "type": "boolean",
                     "default": true,
-                    "description": "自动化测试时，使用HBuilderX内置的Node程序编译uni-app项目（修改后重启生效）。"
+                    "description": "自动化测试时，使用HBuilderX内置的Node程序编译uni-app项目。"
                 },
                 "hbuilderx-for-uniapp-test.isDebug": {
                     "type": "boolean",
