修复 windows 某些情况下，控制台结束测试进程，无法结束的Bug

--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
                 "hbuilderx-for-uniapp-test.isDebug": {
                     "type": "boolean",
                     "default": false,
-                    "description": "是否正在调试，当勾选后，将会在控制台输出更多日志（修改后重启生效）。"
+                    "description": "是否正在调试，当勾选后，将会在控制台输出更多日志。"
                 }
             }
         },
