updaet package.json cli帮助文档

--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
             {
                 "name": "uniapp.test",
                 "descption": "使用HBuilderX cli运行uni-app (x)自动化测试到Web、微信小程序、Android、iOS、Harmony等平台",
-                "doc": "\nDocument: https://uniapp.dcloud.net.cn/worktile/auto/hbuilderx-cli-uniapp-test.html\nExamples:\n  cli uniapp.test web-chrome --project <ProjectPath>\n  cli uniapp.test web-safari --project <ProjectPath>\n  cli uniapp.test web-firefox --project <ProjectPath>\n  cli uniapp.test mp-weixin --project <ProjectPath>\n  cli uniapp.test app-android --project <ProjectPath> \n  cli uniapp.test app-ios-simulator --project <ProjectPath> \n  cli uniapp.test app-harmony --project <ProjectPath> \n",
+                "doc": "\nDocument: https://uniapp.dcloud.net.cn/worktile/auto/hbuilderx-cli-uniapp-test.html\nUsages:\n  cli uniapp.test web-chrome --project <ProjectPath>\n  cli uniapp.test web-safari --project <ProjectPath>\n  cli uniapp.test web-firefox --project <ProjectPath>\n  cli uniapp.test mp-weixin --project <ProjectPath>\n  cli uniapp.test app-android --project <ProjectPath> \n  cli uniapp.test app-ios-simulator --project <ProjectPath> \n  cli uniapp.test app-harmony --project <ProjectPath> \n",
                 "args": [
                     {
                         "name": "help",
@@ -184,8 +184,8 @@
             },
             {
                 "name": "uniapp.test web-chrome",
-                "descption": "运行uni-app (x)自动化测试到web-chrome",
-                "doc": "\nExample: cli uniapp.test web-chrome --project <ProjectPath>",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test web-chrome --project <ProjectPath>",
                 "usage": "cli uniapp.test web-chrome --project <ProjectPath>",
                 "args": [
                     {
@@ -203,8 +203,8 @@
             },
             {
                 "name": "uniapp.test web-safari",
-                "descption": "运行uni-app (x)自动化测试到web-safari",
-                "doc": "\nExample: cli uniapp.test web-safari --project <ProjectPath>",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test web-safari --project <ProjectPath>",
                 "args": [
                     {
                         "name": "help",
@@ -221,8 +221,8 @@
             },
             {
                 "name": "uniapp.test web-firefox",
-                "descption": "运行uni-app (x)自动化测试到web-firefox",
-                "doc": "\nExample: cli uniapp.test web-firefox --project <ProjectPath>",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test web-firefox --project <ProjectPath>",
                 "args": [
                     {
                         "name": "help",
@@ -239,8 +239,8 @@
             },
             {
                 "name": "uniapp.test mp-weixin",
-                "descption": "运行uni-app (x)自动化测试到mp-weixin",
-                "doc": "\nExample: cli uniapp.test mp-weixin --project <ProjectPath>",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test mp-weixin --project <ProjectPath>",
                 "args": [
                     {
                         "name": "help",
@@ -257,8 +257,8 @@
             },
             {
                 "name": "uniapp.test app-android",
-                "descption": "运行uni-app (x)自动化测试到app-android",
-                "doc": "\nExample: cli uniapp.test app-android --project <ProjectPath>",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test app-android --project <ProjectPath>",
                 "args": [
                     {
                         "name": "help",
@@ -282,8 +282,8 @@
             },
             {
                 "name": "uniapp.test app-ios-simulator",
-                "descption": "运行uni-app (x)自动化测试到app-ios-simulator",
-                "doc": "\nExample: cli uniapp.test app-ios-simulator --project <ProjectPath>",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test app-ios-simulator --project <ProjectPath>",
                 "args": [
                     {
                         "name": "help",
@@ -307,12 +307,12 @@
             },
             {
                 "name": "uniapp.test app-harmony",
-                "descption": "运行uni-app (x)自动化测试到app-harmony",
-                "doc": "\nExample: cli uniapp.test app-harmony --project <ProjectPath>",
+                "descption": "CLI 自动化测试到uni-app (x)",
+                "doc": "用法: ./cli uniapp.test app-harmony --project <ProjectPath>",
                 "args": [
                     {
                         "name": "help",
-                        "descption": "发行cli命令帮助"
+                        "descption": "uni-app (x) 自动化测试cli命令帮助"
                     },
                     {
                         "name": "project",
